--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,5 @@
+auxiliary.org-netbeans-modules-php-smarty.smarty-framework=true
+auxiliary.org-netbeans-modules-php-wordpress.enabled=true
 include.path=${php.global.include.path}
 php.version=PHP_56
 source.encoding=UTF-8
